src/nrrd/nrrd.h


typedef struct {
  size_t size;              
  double spacing;           
  double thickness;         
  double min, max;          
  double spaceDirection[NRRD_SPACE_DIM_MAX];
  int center;               
  int kind;                 
  char *label,              
    *units;                 
} NrrdAxisInfo;
typedef struct {
  void *data;                       
  int type;                         
  unsigned int dim;                 
  NrrdAxisInfo axis[NRRD_DIM_MAX];  
  char *content;                    
  char *sampleUnits;                
  int space;                        
  unsigned int spaceDim;            
  char *spaceUnits[NRRD_SPACE_DIM_MAX];
  double spaceOrigin[NRRD_SPACE_DIM_MAX];
  double measurementFrame[NRRD_SPACE_DIM_MAX][NRRD_SPACE_DIM_MAX];
  size_t blockSize;                 
  double oldMin, oldMax;            
  void *ptr;                        
  char **cmt;
  airArray *cmtArr;
  char **kvp;
  airArray *kvpArr;
} Nrrd;
struct NrrdIoState_t;
typedef struct {
  char name[AIR_STRLEN_SMALL];    
  int isImage,    
    readable,     
    usesDIO;      
  int (*available)(void);
  int (*nameLooksLike)(const char *filename);
  int (*fitsInto)(const Nrrd *nrrd, const struct NrrdEncoding_t *encoding,
                   int useBiff);
  int (*contentStartsLike)(struct NrrdIoState_t *nio);
  int (*read)(FILE *file, Nrrd *nrrd, struct NrrdIoState_t *nio);
  int (*write)(FILE *file, const Nrrd *nrrd, struct NrrdIoState_t *nio);
} NrrdFormat;
typedef struct NrrdEncoding_t {
  char name[AIR_STRLEN_SMALL],    
    suffix[AIR_STRLEN_SMALL];     
  int endianMatters,
    isCompression;
  int (*available)(void);
  int (*read)(FILE *file, void *data, size_t elementNum,
              Nrrd *nrrd, struct NrrdIoState_t *nio);
  int (*write)(FILE *file, const void *data, size_t elementNum,
               const Nrrd *nrrd, struct NrrdIoState_t *nio);
} NrrdEncoding;
typedef struct NrrdIoState_t {
  char *path,               
    *base,                  
    *line,                  
    *dataFNFormat,          
    **dataFN,               
    *headerStringWrite;     
  const char
    *headerStringRead;      
  airArray *dataFNArr;      
  FILE *headerFile,         
    *dataFile;              
  unsigned int dataFileDim, 
    lineLen,                
    charsPerLine,           
    valsPerLine,            
    lineSkip,               
    headerStrlen,           
    headerStrpos;           
  long int byteSkip;        
  long int *dataFSkip;      
  airArray *dataFSkipArr;   
  int dataFNMin,            
    dataFNMax,              
    dataFNStep;             
  unsigned int dataFNIndex; 
  int pos,                  
    endian,                 
    seen[NRRD_FIELD_MAX+1], 
    detachedHeader,         
    bareText,               
    skipData,               
    skipFormatURL,          
    keepNrrdDataFileOpen,   
    zlibLevel,              
    zlibStrategy,           
    bzip2BlockSize,         
    learningHeaderStrlen;   
  void *oldData;            
  size_t oldDataSize,       
    chunckElementNumber;    
  const NrrdFormat *format;
  const NrrdEncoding *encoding;
} NrrdIoState;
typedef struct {
  char name[AIR_STRLEN_SMALL];
  unsigned int numParm;  
  double (*support)(const double *parm);
  double (*integral)(const double *parm);
  float (*eval1_f)(float x, const double *parm);
  void (*evalN_f)(float *f, const float *x, size_t N, const double *parm);
  double (*eval1_d)(double x, const double *parm);
  void (*evalN_d)(double *f, const double *x, size_t N, const double *parm);
} NrrdKernel;
typedef struct {
  const NrrdKernel *kernel;
  double parm[NRRD_KERNEL_PARMS_NUM];
} NrrdKernelSpec;
typedef struct {
  const NrrdKernel
    *kernel[NRRD_DIM_MAX]; 
  size_t samples[NRRD_DIM_MAX]; 
  double parm[NRRD_DIM_MAX][NRRD_KERNEL_PARMS_NUM], 
    min[NRRD_DIM_MAX],
    max[NRRD_DIM_MAX];     
  int boundary,            
    type,                  
    renormalize,           
    round,                 
    clamp,                  
    cheap;                  
  double padValue;          
} NrrdResampleInfo;
NRRD_EXPORT const char *const nrrdEnvVarStateMeasureModeBins;
NRRD_EXPORT const char *const nrrdEnvVarStateMeasureHistoType;
NRRD_EXPORT const char *const nrrdEnvVarStateGrayscaleImage3D;
NRRD_EXPORT int nrrdGetenvBool(int *val, char **envStr,
                               const char *envVar);
NRRD_EXPORT int nrrdGetenvEnum(int *val, char **envStr, const airEnum *enm,
                               const char *envVar);
NRRD_EXPORT int nrrdGetenvInt(int *val, char **envStr,
                              const char *envVar);
NRRD_EXPORT int nrrdGetenvUInt(unsigned int *val, char **envStr,
                               const char *envVar);
NRRD_EXPORT int nrrdGetenvDouble(double *val, char **envStr,
                                 const char *envVar);
NRRD_EXPORT void nrrdDefaultGetenv(void);
NRRD_EXPORT void nrrdStateGetenv(void);
NRRD_EXPORT const airEnum *const nrrdFormatType;
NRRD_EXPORT const airEnum *const nrrdType;
NRRD_EXPORT const airEnum *const nrrdEncodingType;
NRRD_EXPORT const airEnum *const nrrdCenter;
NRRD_EXPORT const airEnum *const nrrdKind;
NRRD_EXPORT const airEnum *const nrrdField;
NRRD_EXPORT const airEnum *const nrrdSpace;
NRRD_EXPORT const airEnum *const nrrdSpacingStatus;
NRRD_EXPORT const airEnum *const nrrdBoundary;
NRRD_EXPORT const airEnum *const nrrdMeasure;
NRRD_EXPORT const airEnum *const nrrdUnaryOp;
NRRD_EXPORT const airEnum *const nrrdBinaryOp;
NRRD_EXPORT const airEnum *const nrrdTernaryOp;
NRRD_EXPORT const char nrrdTypePrintfStr[NRRD_TYPE_MAX+1][AIR_STRLEN_SMALL];
NRRD_EXPORT const size_t nrrdTypeSize[NRRD_TYPE_MAX+1];
NRRD_EXPORT const double nrrdTypeMin[NRRD_TYPE_MAX+1];
NRRD_EXPORT const double nrrdTypeMax[NRRD_TYPE_MAX+1];
NRRD_EXPORT const int nrrdTypeIsIntegral[NRRD_TYPE_MAX+1];
NRRD_EXPORT const int nrrdTypeIsUnsigned[NRRD_TYPE_MAX+1];
NRRD_EXPORT NrrdIoState *nrrdIoStateNew(void);
NRRD_EXPORT void nrrdIoStateInit(NrrdIoState *nio);
NRRD_EXPORT NrrdIoState *nrrdIoStateNix(NrrdIoState *nio);
NRRD_EXPORT NrrdResampleInfo *nrrdResampleInfoNew(void);
NRRD_EXPORT NrrdResampleInfo *nrrdResampleInfoNix(NrrdResampleInfo *info);
NRRD_EXPORT NrrdKernelSpec *nrrdKernelSpecNew(void);
NRRD_EXPORT NrrdKernelSpec *nrrdKernelSpecCopy(const NrrdKernelSpec *ksp);
NRRD_EXPORT void nrrdKernelSpecSet(NrrdKernelSpec *ksp, const NrrdKernel *k,
                                   const double kparm[NRRD_KERNEL_PARMS_NUM]);
NRRD_EXPORT void nrrdKernelParmSet(const NrrdKernel **kP,
                                   double kparm[NRRD_KERNEL_PARMS_NUM],
                                   NrrdKernelSpec *ksp);
NRRD_EXPORT NrrdKernelSpec *nrrdKernelSpecNix(NrrdKernelSpec *ksp);
NRRD_EXPORT void nrrdInit(Nrrd *nrrd);
NRRD_EXPORT Nrrd *nrrdNew(void);
NRRD_EXPORT Nrrd *nrrdNix(Nrrd *nrrd);
NRRD_EXPORT Nrrd *nrrdEmpty(Nrrd *nrrd);
NRRD_EXPORT Nrrd *nrrdNuke(Nrrd *nrrd);
NRRD_EXPORT int nrrdWrap_nva(Nrrd *nrrd, void *data, int type,
                             unsigned int dim, const size_t *size);
NRRD_EXPORT int nrrdWrap_va(Nrrd *nrrd, void *data, int type, unsigned int dim,
                            ... );
NRRD_EXPORT void nrrdBasicInfoInit(Nrrd *nrrd, int excludeBitflag);
NRRD_EXPORT int nrrdBasicInfoCopy(Nrrd *nout, const Nrrd *nin,
                                  int excludeBitflag);
NRRD_EXPORT int nrrdCopy(Nrrd *nout, const Nrrd *nin);
NRRD_EXPORT int nrrdAlloc_nva(Nrrd *nrrd, int type, unsigned int dim,
                              const size_t *size);
NRRD_EXPORT int nrrdAlloc_va(Nrrd *nrrd, int type, unsigned int dim,
                             ... );
NRRD_EXPORT int nrrdMaybeAlloc_nva(Nrrd *nrrd, int type, unsigned int dim,
                                   const size_t *size);
NRRD_EXPORT int nrrdMaybeAlloc_va(Nrrd *nrrd, int type, unsigned int dim,
                                  ... );
NRRD_EXPORT int nrrdPPM(Nrrd *, size_t sx, size_t sy);
NRRD_EXPORT int nrrdPGM(Nrrd *, size_t sx, size_t sy);
NRRD_EXPORT int nrrdKindIsDomain(int kind);
NRRD_EXPORT unsigned int nrrdKindSize(int kind);
NRRD_EXPORT int nrrdAxisInfoCopy(Nrrd *nout, const Nrrd *nin,
                                 const int *axmap, int excludeBitflag);
NRRD_EXPORT void nrrdAxisInfoSet_nva(Nrrd *nin, int axInfo, const void *info);
NRRD_EXPORT void nrrdAxisInfoSet_va(Nrrd *nin, int axInfo,
                                    ... );
NRRD_EXPORT void nrrdAxisInfoGet_nva(const Nrrd *nrrd, int axInfo, void *info);
NRRD_EXPORT void nrrdAxisInfoGet_va(const Nrrd *nrrd, int axInfo,
                                    ... );
NRRD_EXPORT double nrrdAxisInfoPos(const Nrrd *nrrd, unsigned int ax,
                                   double idx);
NRRD_EXPORT double nrrdAxisInfoIdx(const Nrrd *nrrd, unsigned int ax,
                                   double pos);
NRRD_EXPORT void nrrdAxisInfoPosRange(double *loP, double *hiP,
                                      const Nrrd *nrrd, unsigned int ax,
                                      double loIdx, double hiIdx);
NRRD_EXPORT void nrrdAxisInfoIdxRange(double *loP, double *hiP,
                                      const Nrrd *nrrd, unsigned int ax,
                                      double loPos, double hiPos);
NRRD_EXPORT void nrrdAxisInfoSpacingSet(Nrrd *nrrd, unsigned int ax);
NRRD_EXPORT void nrrdAxisInfoMinMaxSet(Nrrd *nrrd, unsigned int ax,
                                       int defCenter);
NRRD_EXPORT unsigned int nrrdDomainAxesGet(const Nrrd *nrrd,
                                           unsigned int axisIdx[NRRD_DIM_MAX]);
NRRD_EXPORT unsigned int nrrdRangeAxesGet(const Nrrd *nrrd,
                                          unsigned int axisIdx[NRRD_DIM_MAX]);
NRRD_EXPORT unsigned int nrrdSpatialAxesGet(const Nrrd *nrrd,
                                            unsigned int
                                            axisIdx[NRRD_DIM_MAX]);
NRRD_EXPORT unsigned int nrrdNonSpatialAxesGet(const Nrrd *nrrd,
                                               unsigned int
                                               axisIdx[NRRD_DIM_MAX]);
NRRD_EXPORT int nrrdSpacingCalculate(const Nrrd *nrrd, unsigned int ax,
                                     double *spacing,
                                     double vector[NRRD_SPACE_DIM_MAX]);
NRRD_EXPORT int nrrdOrientationReduce(Nrrd *nout, const Nrrd *nin,
                                      int setMinsFromOrigin);
NRRD_EXPORT const char *nrrdBiffKey;
NRRD_EXPORT unsigned int nrrdSpaceDimension(int space);
NRRD_EXPORT int nrrdSpaceSet(Nrrd *nrrd, int space);
NRRD_EXPORT int nrrdSpaceDimensionSet(Nrrd *nrrd, unsigned int spaceDim);
NRRD_EXPORT unsigned int nrrdSpaceOriginGet(const Nrrd *nrrd,
                                            double vector[NRRD_SPACE_DIM_MAX]);
NRRD_EXPORT int nrrdSpaceOriginSet(Nrrd *nrrd, const double *vector);
NRRD_EXPORT int nrrdOriginCalculate(const Nrrd *nrrd,
                                    unsigned int *axisIdx,
                                    unsigned int axisIdxNum,
                                    int defaultCenter, double *origin);
NRRD_EXPORT int nrrdContentSet_va(Nrrd *nout, const char *func,
                                  const Nrrd *nin, const char *format,
                                  ...  );
NRRD_EXPORT void nrrdDescribe(FILE *file, const Nrrd *nrrd);
NRRD_EXPORT int nrrdCheck(const Nrrd *nrrd);
NRRD_EXPORT size_t nrrdElementSize(const Nrrd *nrrd);
NRRD_EXPORT size_t nrrdElementNumber(const Nrrd *nrrd);
NRRD_EXPORT int nrrdSanity(void);
NRRD_EXPORT int nrrdSameSize(const Nrrd *n1, const Nrrd *n2, int useBiff);
NRRD_EXPORT void nrrdSpaceVecCopy(double dst[NRRD_SPACE_DIM_MAX],
                                  const double src[NRRD_SPACE_DIM_MAX]);
NRRD_EXPORT void nrrdSpaceVecScaleAdd2(double sum[NRRD_SPACE_DIM_MAX],
                                       double sclA,
                                       const double vecA[NRRD_SPACE_DIM_MAX],
                                       double sclB,
                                       const double vecB[NRRD_SPACE_DIM_MAX]);
NRRD_EXPORT void nrrdSpaceVecScale(double out[NRRD_SPACE_DIM_MAX],
                                   double scl,
                                   const double vec[NRRD_SPACE_DIM_MAX]);
NRRD_EXPORT double nrrdSpaceVecNorm(unsigned int sdim,
                                    const double vec[NRRD_SPACE_DIM_MAX]);
NRRD_EXPORT void nrrdSpaceVecSetNaN(double vec[NRRD_SPACE_DIM_MAX]);
NRRD_EXPORT int nrrdCommentAdd(Nrrd *nrrd, const char *str);
NRRD_EXPORT void nrrdCommentClear(Nrrd *nrrd);
NRRD_EXPORT int nrrdCommentCopy(Nrrd *nout, const Nrrd *nin);
NRRD_EXPORT unsigned int nrrdKeyValueSize(const Nrrd *nrrd);
NRRD_EXPORT int nrrdKeyValueAdd(Nrrd *nrrd,
                                const char *key, const char *value);