python/cffi/cdef/cdef_air.h


typedef struct {
  const char *name;
  unsigned int M;
  const char **str; 
  const int *val;   
  const char **desc;
  const char **strEqv;
  const int *valEqv;
  int sense; 
} airEnum;